<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/brown_color"
        android:title="@string/rechercher_un_producteur"
        android:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_back_24"
        app:navigationIconTint="@color/white"
       />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/brown_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Entrez le numéro"
            android:fontFamily="@font/nunito_extra_bold"
            android:textSize="15sp"
            android:textColor="@color/brown_color"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/yellow_color" />
    </TableRow>

    <EditText
        android:id="@+id/searchFarmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/entrez_le_num_ro_du_producteur"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_search_farmer_24"
        android:drawablePadding="3dp"
        android:ems="20"
        android:inputType="number"
        />
    <Button
        android:id="@+id/searchFarmerBtn"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login_bg"
        android:textColor="@color/white"
        android:text="@string/rechercher" />
</LinearLayout>