<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_color"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="77dp"
            android:layout_height="101dp"
            android:layout_weight="2"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:drawableTint="@color/brown_color"
                android:textColor="@color/brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_person" />

            <TextView
                android:id="@+id/networkState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:drawableTint="@color/brown_color"
                android:gravity="right"
                android:text="@string/networkState"
                android:textColor="@color/brown_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/online"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawablePadding="3dp"
                android:drawableTint="@color/red_color"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/logout"
                android:textColor="@color/red_color"
                android:textSize="16sp"
                app:drawableRightCompat="@drawable/logout" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/farmersFragmentContainer"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="2dp"
            android:layout_weight="1" />

        <!-- Deuxième emplacement -->
        <FrameLayout
            android:id="@+id/offersFragmentContainer"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="2dp"
            android:layout_weight="1" />

        <!-- Troisième emplacement -->
        <FrameLayout
            android:id="@+id/achatDamandeFragmentContainer"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="2dp"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/parcAboisFragmentContainer"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="2dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:background="@drawable/rounded_top_corners"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/addFarmerBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="1dp"
            android:layout_weight="1" />

        <!-- Deuxième emplacement -->
        <FrameLayout
            android:id="@+id/addOfferBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="1dp"
            android:layout_weight="1" />

        <!-- Troisième emplacement -->
        <FrameLayout
            android:id="@+id/addAchatDemandeBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="1dp"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/addBtnParcAbois"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/syncBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login_bg"
            android:padding="10dp"
            android:text="@string/synchroniser_les_donnees"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>